# clinical-db-analysis

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT_GUIDELINES.md  README.md  claude.md  db  db.bat  db_helper.py  nsqip  nsqip.bat  pyproject.toml  quickstart.py  test_nsqip_tools.py
claude_config/: CLAUDE.md
claude_config/claude_config/: README.md  VERSION.md
claude_config/claude_config/checklists/: commit.md  session_start.md
claude_config/claude_config/core/: principles.md
claude_config/claude_config/experts/domain_experts/: marimo_expert.md
claude_config/claude_config/guidelines/: clinical_data_specifics.md  coding_standards.md  data_handling.md  git_workflow.md  repository_maintenance.md
claude_config/claude_config/project/: architecture.md  details.md  log.md
projects/: README.md
projects/brant_projects/: tonsillectomy_mortality_analysis.py
projects/example-mortality-analysis/: README.md
shared/docs/: git-basics-guide.md
shared/templates/: basic_analysis.py  clinical_db_analysis.py  ncdb_analysis.py  nsqip_analysis.py  pnsqip_analysis.py
shared/utils/: __init__.py  nsqip_helpers.py
