[project]
name = "clinical-db-analysis"
version = "0.1.0"
description = "Collaborative repository for clinical database analysis using NSQIP and NCDB data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.13.15",
    "matplotlib>=3.10.3",
    "nsqip-tools>=0.1.0",
    "polars>=1.30.0",
    "seaborn>=0.13.2",
]
